fixed silly formatting glitch

--- a/projects/javascript/perlin.html
+++ b/projects/javascript/perlin.html
@@ -139,7 +139,7 @@ cosine functions with a random angle, theta!</p>
 <p>Let's make a function out for this. It will return the coordinate as an
 object with <code>x</code> and <code>y</code> attributes.</p>
 
-<div style='border: 1px solid black;float: right; transform: translate(0, -50%);'>
+<div style='border: 1px solid black;float: right'>
 <canvas id='cnvs1'></canvas>
 <div style='text-align:center;'>Random unit vectors.</div>
 </div>
@@ -182,7 +182,6 @@ requestAnimationFrame(update);
 
 requestAnimationFrame(update);
 </script>
-</div>
 
 <p>Now we need to populate the grid with these random vectors. A nested
 for-loop is easiest to do this with.</p>
