--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@ and I can contact you via that.
 Finally, to increase the cat to non-cat content on the web, here are mine:
 </p>
 
-<img class='quater_img' src='/images/cats/wisps.jpg'></img
-><img class='quater_img' src='/images/cats/wisps2.jpg'></img
-><img class='quater_img' src='/images/cats/kitkat.jpg'></img
-><img class='quater_img' src='/images/cats/cats.jpg'></img>
+<a href='/images/cats/wisps.jp'><img class='quater_img' src='/images/cats/wisps.jpg'></img></a
+></a><a href='/images/cats/wisps2.jpg'><img class='quater_img' src='/images/cats/wisps2.jpg'></img></a
+></a><a href='/images/cats/kitkat.jpg'><img class='quater_img' src='/images/cats/kitkat.jpg'></img></a
+></a><a href='/images/cats/cats.jpg'><img class='quater_img' src='/images/cats/cats.jpg'></img></a>
 
 <script>
 'use strict';
