Removed age and fixed grammar mistake.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <h1>Hi,</h1>
 
 <p>
-My name is Joe, I'm 17, and this website is home to my projects.
+My name is Joe and this website is home to my projects.
 </p>
 
 <p>
@@ -30,7 +30,7 @@ If only here for a quick browse, I thought I'd save you some time by compiling m
 
 <hr>
 
-<h3>Thank You Open Cosmos</h3>
+<h3>Open Cosmos Shoutout</h3>
 
 <p>
 I recently developed a demonstration satellite sub-system for <a
@@ -47,9 +47,9 @@ Open Cosmos wrote an <!--<a
 href='https://open-cosmos.com/sub-systems-for-small-satellites/'>
 article</a>--> <a
 href='/misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos.html'>
-article</a>(the post was lost to the web when they rebranded their website, so
-this is a link to an archive of the original blog post) on my work. The article
-ties the low cost project with their company's message of low cost and
+article</a> on my work (the post was lost to the web when they rebranded their
+website, so this is a link to an archive of the original blog post). The
+article ties the low cost project with their company's message of low cost and
 ease-of-access to space endeavours.
 </p>
 
